welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:2: error: method jardiniereFleur overrides nothing
override def jardiniereFleur() {
             ^